--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -4,9 +4,11 @@
       android:versionCode="1"
       android:versionName="1.0">
     <uses-sdk android:minSdkVersion="10" />
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE"></uses-permission>
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".LeechyRemoteActivity"
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:permission="android.permission.INTERNET">
+        <activity android:name=".RemoteActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
